# riscv_pulpino

./: .gitignore  README.md  cmake_configure.riscv.gcc.sh  setup.bash  update-ips.py
dc/: .gitignore  README.md  compile_atpg.tcl  compile_dc.0305.tcl  compile_dc.tcl  compile_dft.tcl  gen_filelist.js  spg_lint.tcl
emb_soft/sw/: cmake_configure.zeroriscy.gcc.sh
emb_soft/sw/apps/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
emb_soft/sw/apps/freertos/Source/portable/GCC/RI5CY/: port.c  portasm.S
emb_soft/sw/apps/freertos10/: CMakeLists.txt  FreeRTOSConfig.h  bmp.h  fifo.c  fifo.h  main.c  oled-task.c  shell-task.c  shell.c  shell.h  tools.c  tools.h
emb_soft/sw/apps/freertos10/Source/portable/GCC/RI5CY/: port.c  portasm.S  portmacro.h
emb_soft/sw/apps/freertos10/Source/portable/GCC/RI5CY/bk/: freertos_risc_v_chip_specific_extensions.h  port.c  portasm.S  portmacro.h
emb_soft/sw/apps/imperio_tests/: CMakeLists.txt
emb_soft/sw/apps/imperio_tests/testClockcal/: CMakeLists.txt  testClockcal.c
emb_soft/sw/apps/imperio_tests/testEFLASH/: CMakeLists.txt  testEFLASH.c
emb_soft/sw/apps/imperio_tests/testGPIO/: testGPIO.c
emb_soft/sw/apps/imperio_tests/testI2C/: CMakeLists.txt  testI2C.c  testI2C.c.bk
emb_soft/sw/apps/imperio_tests/testInterrupt/: main (copy 1).c  main.c
emb_soft/sw/apps/imperio_tests/testOLED/: CMakeLists.txt  bmp.h  oled-main.c  oled.c  oled.h  oledfont.h
emb_soft/sw/apps/imperio_tests/testPower/: CMakeLists.txt  testPower.c
emb_soft/sw/apps/imperio_tests/testRTC/: CMakeLists.txt  testRTC.c
emb_soft/sw/apps/imperio_tests/testSPI/: CMakeLists.txt  testSPI.c
emb_soft/sw/apps/imperio_tests/testSPIMaster/: testSPIMaster.c
emb_soft/sw/apps/imperio_tests/testShell/: CMakeLists.txt  testShell.c
emb_soft/sw/apps/imperio_tests/testUART/: testUART.c
emb_soft/sw/apps/imperio_tests/testUARTx/: CMakeLists.txt  testUARTx.c
emb_soft/sw/apps/imperio_tests/tinyshell/: CMakeLists.txt  fifo.c  main.c  shell.c  shell.h
emb_soft/sw/libs/sys_lib/: CMakeLists.txt  readme.txt
emb_soft/sw/libs/sys_lib/inc/: bar.h  drv_clock.h  drv_clockcal.h  drv_console.h  drv_eflash.h  drv_gpio.h  drv_i2c.h  drv_power.h  drv_pwm.h  drv_rtc.h  drv_scu.h  drv_spi.h  drv_timer.h  drv_uart.h  drv_wdt.h  event.h  gpio.h  i2c.h  int.h  proton.h  spi.h  timer.h  uart.h
emb_soft/sw/libs/sys_lib/src/: drv_clock.c  drv_clockcal.c  drv_console.c  drv_eflash.c  drv_gpio.c  drv_i2c.c  drv_power.c  drv_pwm.c  drv_rtc.c  drv_scu.c  drv_spi.c  drv_timer.c  drv_uart.c  drv_wdt.c  exceptions.c  int.c  spi.c  uart.c  utils.c
flow/memaker/: mbistreadme  memaker.env  readme
fpga/: .gitignore
fpga/pulpino/: constraints.xdc  pulpino_top_stub.v
fpga/rtl/: pulpemu_top.v  pulpino_wrap.v
ips/adc/: SAR_TOP.v  adc_control.sv  adc_control.v  adc_define.sv  adc_th.sv  apb_adc_control.sv  apb_adc_control.v  fifo_async.sv  fifo_async.v  sar_top_fpga.v  src_files.yml
rtl/: ANA_TOP.v  PF64AK32EI40.v  boot_code.sv  clk_rst_ctrl.sv  clk_rst_gen.sv  core_region.sv  instr_ram_wrap.sv  periph_bus_wrap.sv  peripherals.sv  pulpino_top.sv  soc_define.vh  sp_data_ram_wrap.sv  sp_instr_ram_wrap.sv  sp_ram_wrap.sv
sw/: CMakeLists.txt
sw/apps/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
sw/apps/freertos/Source/: tasks.c
sw/apps/freertos/Source/portable/GCC/RI5CY/: port.c  portasm.S  portmacro.h
tb/: SAR_TOP.v  i2c_eeprom_model.sv  tb.sv  tb_jtag_pkg.sv  tb_mem_pkg.sv  tb_spi_pkg.sv
verif/: readme  setup.src
vsim/: .gitignore
(+183 files in other folders)
