
#add_subdirectory(testTimer)
add_subdirectory(testInterrupt)
add_subdirectory(testUART)
add_subdirectory(testI2C)
add_subdirectory(testSPIMaster)
add_subdirectory(testGPIO)
add_subdirectory(testRTC)
add_subdirectory(testPower)
add_subdirectory(testClockcal)
add_subdirectory(testSPI)
add_subdirectory(testUARTx)
add_subdirectory(testShell)
add_subdirectory(testOLED)
add_subdirectory(tinyshell)
add_subdirectory(testEFLASH)
